add column detalle in diseñoPersonalizado